@@ -31,17 +31,17 @@ function get_open_balance($supplier_id, $to)
 {
 	$to = date2sql($to);
 
-    $sql = "SELECT SUM(IF(".TB_PREF."supp_trans.type = ".ST_SUPPINVOICE." OR ".TB_PREF."supp_trans.type = ".ST_BANKDEPOSIT.", 
-    	(".TB_PREF."supp_trans.ov_amount + ".TB_PREF."supp_trans.ov_gst + ".TB_PREF."supp_trans.ov_discount), 0)) AS charges,
-    	SUM(IF(".TB_PREF."supp_trans.type <> ".ST_SUPPINVOICE." AND ".TB_PREF."supp_trans.type <> ".ST_BANKDEPOSIT.", 
-    	(".TB_PREF."supp_trans.ov_amount + ".TB_PREF."supp_trans.ov_gst + ".TB_PREF."supp_trans.ov_discount), 0)) AS credits,
-		SUM(".TB_PREF."supp_trans.alloc) AS Allocated,
-		SUM(IF(".TB_PREF."supp_trans.type = ".ST_SUPPINVOICE." OR ".TB_PREF."supp_trans.type = ".ST_BANKDEPOSIT.",
-		(".TB_PREF."supp_trans.ov_amount + ".TB_PREF."supp_trans.ov_gst + ".TB_PREF."supp_trans.ov_discount - ".TB_PREF."supp_trans.alloc),
-		(".TB_PREF."supp_trans.ov_amount + ".TB_PREF."supp_trans.ov_gst + ".TB_PREF."supp_trans.ov_discount + ".TB_PREF."supp_trans.alloc))) AS OutStanding
-		FROM ".TB_PREF."supp_trans
-    	WHERE ".TB_PREF."supp_trans.tran_date < '$to'
-		AND ".TB_PREF."supp_trans.supplier_id = '$supplier_id' GROUP BY supplier_id";
+    $sql = "SELECT SUM(IF(t.type = ".ST_SUPPINVOICE." OR t.type = ".ST_BANKDEPOSIT.", 
+    	(t.ov_amount + t.ov_gst + t.ov_discount), 0)) AS charges,
+    	SUM(IF(t.type <> ".ST_SUPPINVOICE." AND t.type <> ".ST_BANKDEPOSIT.", 
+    	(t.ov_amount + t.ov_gst + t.ov_discount), 0)) AS credits,
+		SUM(IF(t.type <> ".ST_SUPPINVOICE." AND t.type <> ".ST_BANKDEPOSIT.", t.alloc * -1, t.alloc)) AS Allocated,
+		SUM(IF(t.type = ".ST_SUPPINVOICE." OR t.type = ".ST_BANKDEPOSIT.",
+		(t.ov_amount + t.ov_gst + t.ov_discount - t.alloc),
+		(t.ov_amount + t.ov_gst + t.ov_discount + t.alloc))) AS OutStanding
+		FROM ".TB_PREF."supp_trans t
+    	WHERE t.tran_date < '$to'
+		AND t.supplier_id = '$supplier_id' GROUP BY supplier_id";
 
     $result = db_query($sql,"No transactions were returned");
     return db_fetch($result);
@@ -52,15 +52,14 @@ function getTransactions($supplier_id, $from, $to)
 	$from = date2sql($from);
 	$to = date2sql($to);
 
-    $sql = "SELECT ".TB_PREF."supp_trans.*,
-				(".TB_PREF."supp_trans.ov_amount + ".TB_PREF."supp_trans.ov_gst + ".TB_PREF."supp_trans.ov_discount)
-				AS TotalAmount, ".TB_PREF."supp_trans.alloc AS Allocated,
-				((".TB_PREF."supp_trans.type = ".ST_SUPPINVOICE.")
-					AND ".TB_PREF."supp_trans.due_date < '$to') AS OverDue
-    			FROM ".TB_PREF."supp_trans
-    			WHERE ".TB_PREF."supp_trans.tran_date >= '$from' AND ".TB_PREF."supp_trans.tran_date <= '$to' 
-    			AND ".TB_PREF."supp_trans.supplier_id = '$supplier_id' AND ".TB_PREF."supp_trans.ov_amount!=0
-    				ORDER BY ".TB_PREF."supp_trans.tran_date";
+    $sql = "SELECT *,
+				(t.ov_amount + t.ov_gst + t.ov_discount)
+				AS TotalAmount, IF(t.type <> ".ST_SUPPINVOICE." AND t.type <> ".ST_BANKDEPOSIT.", t.alloc * -1, t.alloc) AS Allocated,
+				((t.type = ".ST_SUPPINVOICE.") AND t.due_date < '$to') AS OverDue
+    			FROM ".TB_PREF."supp_trans t
+    			WHERE t.tran_date >= '$from' AND t.tran_date <= '$to' 
+    			AND t.supplier_id = '$supplier_id' AND t.ov_amount <> 0
+    				ORDER BY t.tran_date";
 
     $TransResult = db_query($sql,"No transactions were returned");
 
@@ -211,7 +210,8 @@ function print_supplier_balances()
 			if ($trans['TotalAmount'] > 0.0)
 				$item[3] = $item[0] - $item[2];
 			else	
-				$item[3] = ($item[1] - $item[2]) * -1;
+				//$item[3] = ($item[1] - $item[2]) * -1;
+				$item[3] = -$item[1] - $item[2];
 			if ($show_balance)	
 				$rep->AmountCol(7, 8, $accumulate, $dec);
 			else	
